--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <ul style="list-style: none;">
         <li>
-            <a href="#" target="_blank">
-                <img src="./img/Rectangle 6.png" alt="">
+            <a href="#" src="./img/Rectangle 6.png" target="_blank">
+                phone
             </a>
         </li>
     </ul>
