--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <ul style="list-style: none;">
         <li>
-            <a href="#" src="./img/Rectangle 6.png" target="_blank">
+            <a href="./img/Rectangle 6.png" target="_blank">
                 phone
             </a>
         </li>
