--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <ul style="list-style: none;">
         <li>
             <a href="./img/Rectangle 6.png" target="_blank">
-                phone
+                img-mobile-version
             </a>
         </li>
     </ul>
